--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/EVENTS/on-entity-death.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/EVENTS/on-entity-death.html
@@ -25,18 +25,46 @@
         <br>
         <h2>Description</h2>
         <p>
-            Description.
+            This event is triggered when an entity dies or is destroyed within the game world.
+            <br><br>
+            "This event is triggered when an entity meets its demise or is destroyed within the game world. This event serves as a notification mechanism for signaling the
+            occurrence of an entity's death to other game components or systems. You can subscribe to this event to implement various post-death behaviors or actions, such
+            as playing death animations, triggering particle effects, removing the entity from the scene, updating scoreboards, or initiating game over conditions.
         </p>
         <br>
         <p>
-            Example.
+            To use the example below, attach the provided script to a 2D game object of your choice. When you press the '<b>Escape</b>' key on your keyboard, a message will be logged
+            in the console, indicating that the entity has died.
         </p>
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a> 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../entity-health.html">EntityHealth</a>))]
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    
+    private <a class="redirect-link" href="../entity-health.html">EntityHealth</a> healthScript;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        healthScript = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Component.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../entity-health.html">EntityHealth</a>&gt;();
+        healthScript.<a class="redirect-link" href="../PUBLIC-PROPERTIES/max-health-points.html">MaxHealthPoints</a> = 100f;
+        healthScript.<a class="redirect-link" href="../PUBLIC-PROPERTIES/current-health-points.html">CurrentHealthPoints</a> = 100f;
+
+        healthScript.<b>OnEntityDeath</b> += HealthScript_OnEntityDeath;
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.Escape.html">KeyCode.Escape</a>))
+        {
+            healthScript.<a class="redirect-link" href="../PUBLIC-METHODS/take-damage.html">TakeDamage</a>(100f);
+        }
+    }
+
+    private void HealthScript_OnEntityDeath(object sender, EventArgs e)
+    {
+        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The entity died.");
+    }
 }
 </pre>
 </div>
