--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/top-speed.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/top-speed.html
@@ -27,11 +27,9 @@
         <p>
             The character's set movement speed.
             <br> <br>
-            This property represents the value set in the component's inspector for the '<b>moveSpeed</b>' field.
-        </p>
-        <br>
-        <p>
-            In this example, it is assumed that the <b>Example</b> class is attached to the same gameObject as the <b>CharacterMovement</b> class:
+            This property represents the character's maximum movement speed within the game world. It defines the upper limit of how fast the character can move when traversing
+            the environment. Adjusting this property allows you to fine-tune the character's mobility and responsiveness, providing control over the overall pace and
+            fluidity of movement during gameplay.
         </p>
 <pre class="code-block">
 using UnityEngine;
