--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>CharacterMovement</h1>
+        <div class="title-container">
+            <h1>CharacterMovement</h1>
+            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-MOVEMENT/character-movement.html">Manual</a>
+        </div>
         <h2>Description</h2>
         <p>
             This class manages your character's movement, seamlessly combining animation curves with Unity's <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a>
