--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="table-division">
-            <span class="table-title">Combat System</span>
+            <span class="table-title">Combat System - General</span>
             <table>
                 <tr>
                     <td class="label">CharacterCombat</td>
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td class="label-classes">EntityHealth</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/ENTITY-HEALTH/entity-health.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ENTITY-HEALTH/entity-health.html">Scripting</a></td>
                 </tr>
             </table>
@@ -71,12 +71,12 @@
             <table>
                 <tr>
                     <td class="label-classes">AttackSO</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/ATTACK-SO/attack-so.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ATTACK-SO/attack-so.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">ArmourSO</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/ARMOUR-SO/armour-so.html">Manual</a></td>
                     <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ARMOUR-SO/armour-so.html">Scripting</a></td>
                 </tr>
             </table>
