--- a/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CombatSystemProjectile</title>
+    <title>ArmourSO</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
 
     <div class="main-page-division">
         <div class="title-container">
-            <h1>CombatSystemProjectile</h1>
-            <a class="manual-or-scripting-button" href="../../SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Scripting</a>
+            <h1>ArmourSO</h1>
+            <a class="manual-or-scripting-button" href="../../SCRIPTING/ARMOUR-SO/armour-so.html">Scripting</a>
         </div>
     </div>
 </body>
