--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        
+        <div class="title-container">
+            <h1>CharacterMovement</h1>
+            <a class="manual-or-scripting-button" href="../../SCRIPTING/CHARACTER-MOVEMENT/character-movement.html">Scripting</a>
+        </div>
     </div>
 </body>
 </html>
