--- a/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>AttackSO</h1>
+        <div class="title-container">
+            <h1>AttackSO</h1>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ATTACK-SO/attack-so.html">Manual</a>
+        </div>
         <h2>Description</h2>
         <p>
             The <b>AttackSO</b> is a <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-ScriptableObject.html">Scriptable Object</a> that stores the data of an attack.
