--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>CharacterLedgeGrab</h1>
+        <div class="title-container">
+            <h1>CharacterLedgeGrab</h1>
+            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-LEDGE-GRAB/character-ledge-grab.html">Manual</a>
+        </div>
         <h2>Dependencies</h2>
         <p>
             <p><b style="text-decoration: underline;">Required</b> Component: <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
