--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>EntityHealth</h1>
+        <div class="title-container">
+            <h1>EntityHealth</h1>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ENTITY-HEALTH/entity-health.html">Manual</a>
+        </div>
         <h2>Description</h2>
         <p>
             This class manages health-related aspects for entities in the game, including tracking health points, handling damage events, and managing
