--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>CharacterEnvironmentalQuery</h1>
+        <div class="title-container">
+            <h1>CharacterEnvironmentalQuery</h1>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ENV-QUERY/env-query.html">Manual</a>
+        </div>
         <h2>Description</h2>
         <p>
             The <b>CharacterEnvironmentalQuery</b> class serves as the central hub for managing collision checks within this asset. Some of the scripts in this asset, seeking
